added priority functionality

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 				<label><%- title %><%= completed ? ' -- done!' : '' %></label>
 				<!-- added edit-btn to item template -->
 				<button class="edit-btn"></button>
+				<!-- added priority-btn to item template -->
+				<button class="priority-btn"></button>
 				<button class="destroy"></button>
 			</div>
 			<input class="edit" value="<%- title %>">
